vlib/v/checker/tests/array_plus_assign_err.vv
mut buffer := []u8{cap: 1024}
buffer += "ipconfig && sudo apt-get install -y some_amazing_package name + command output".bytes()